# grace-ai

./: .gitignore  README.txt  __init__.py  _i.old  fixes.md  pyproject.toml  requirements.txt  run.py
audio/: __init__.py  ai.old  audio_output.py  audio_utils.py  speech_recognition.py  sr.old
config/: testpiper.py
grace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm/: lm.old
memory/: __init__.py  critical.py  ms.old  sl.old  sqlite.py
ovos/: __init__.py  oc.old  oh.old  ovos_client.py  ovos_commands.py  ovos_handlers.py  ovos_message.py
src/: Grace_Project_Overview.txt  main.py  requirements.txt  run.py
tests/: run_tests.py  test_audio.py  test_base.py  test_basic.py  test_concurrency.py  test_integration.py  test_memory.py  test_ovos.py  test_resources.py  test_sqlite.py  test_utils.py
training_data/: grace_ovos_clarification_dialogues.jsonl  grace_ovos_clarification_dialogues_part2.jsonl  grace_ovos_dialogue_pruned.jsonl  grace_ovos_dialogue_pt2_v1.jsonl  grace_ovos_dialogue_pt2_v2.jsonl  grace_ovos_dialogue_pt2_v3.jsonl  grace_ovos_dialogue_pt2_v4.jsonl  grace_ovos_dialogue_pt2_v6.jsonl  grace_ovos_dialogue_pt2_v7.jsonl  grace_ovos_dialogue_v10.jsonl  grace_ovos_dialogue_v2.jsonl  grace_ovos_dialogue_v3.jsonl  grace_ovos_dialogue_v4.jsonl  grace_ovos_dialogue_v5.jsonl  grace_ovos_dialogue_v6.jsonl  grace_ovos_dialogue_v7.jsonl  grace_ovos_dialogue_v9.jsonl  grace_ovos_slice.jsonl.old  grace_ovos_slice_base_commands.jsonl  grace_ovos_training_slice_complete_v11.jsonl  grace_ovos_training_slice_v11_clean.jsonl  harvest_ovos_commands.py  (+4 more)
(+30 files in other folders)
